--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "prueba de Node con lite-server",
   "main": "index.html",
   "scripts": {
-	"dev": "lite-server",
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "lite-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/RyuYii/Proyecto1#readme",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
